--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,7 @@
       "height": 4
     }
   },
-  "locations": ["lcard-1", "settings", "digital_pipeline"],
+  "locations": ["lcard-1", "settings"],
   "integration": {
     "url": "https://alerom2006.github.io/Calendar/index.html",
     "type": "widget",
