--- a/manifest.json
+++ b/manifest.json
@@ -43,13 +43,13 @@
   "settings": {
     "deal_date_field_id": {
       "name": "widget.deal_date_field",
-      "type": "number",
+      "type": "text",
       "default": 885453,
       "required": true
     },
     "delivery_range_field": {
       "name": "widget.delivery_range",
-      "type": "number",
+      "type": "text",
       "default": 892009,
       "required": false
     }
