--- a/manifest.json
+++ b/manifest.json
@@ -38,7 +38,15 @@
     "template": "index.html"
   },
   "tour": {
-    "is_tour": false
+    "is_tour": true,
+    "tour_images": {
+      "ru": [
+        "/images/logo_main.png",
+        "/images/logo_main.png",
+        "/images/logo_main.png"
+      ]
+    },
+    "tour_description": "widget.tour_description"
   },
   "settings": {
     "deal_date_field_id": {
