--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
       "email": "your@email.com"
     }
   },
-  "locations": ["lcard-1", "settings", "deal_detail"],
+  "locations": ["lcard-1", "deal_detail"],
   "tour": {
     "is_tour": true,
     "tour_images": {
@@ -25,19 +25,5 @@
       ]
     },
     "tour_description": "widget.tour_description"
-  },
-  "settings": {
-    "deal_date_field_id": {
-      "name": "widget.deal_date_field",
-      "type": "text",
-      "required": true,
-      "default": "885453"
-    },
-    "delivery_range_field": {
-      "name": "widget.delivery_range",
-      "type": "text",
-      "required": false,
-      "default": "892009"
-    }
   }
 }
