--- a/manifest.json
+++ b/manifest.json
@@ -26,14 +26,12 @@
     "deal_date_field_id": {
       "name": "widget.deal_date_field",
       "type": "text",
-      "required": true,
-      "placeholder": "885453"
+      "required": true
     },
     "delivery_range_field": {
       "name": "widget.delivery_range",
       "type": "text",
-      "required": false,
-      "placeholder": "892009"
+      "required": false
     }
   }
 }
