--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
     "locale": ["ru"],
     "installation": true,
     "support": {
-      "link": "https://example.com",
+      "link": "https://alerom2006.github.io/Calendar/",
       "email": "support@example.com"
     }
   },
