--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "widget": {
     "manifest_version": "1.0",
-    "name": "widget.name",
-    "description": "widget.description",
-    "short_description": "widget.short_description",
+    "name": "Календарь заказов",
+    "description": "Виджет для отображения сделок по дате заказа",
+    "short_description": "Показывает заказы в календаре",
     "version": "1.0.4",
     "interface_version": 2,
     "init_once": false,
@@ -11,30 +11,34 @@
     "installation": true,
     "support": {
       "link": "https://alerom2006.github.io/Calendar/",
-      "email": "support@example.com"
+      "email": "your-email@example.com"
     },
     "url": "https://alerom2006.github.io/Calendar/"
+  },
+  "integration": {
+    "type": "widget",
+    "view": {
+      "leads": "sidebar"
+    },
+    "oauth": {
+      "client_id": "6696f2d5-76c2-47fd-bec9-da46d382d511",
+      "redirect_uri": "https://alerom2006.github.io/Calendar/oauth_callback.html"
+    }
   },
   "locations": ["lcard-1", "settings"],
   "settings": {
     "deal_date_field_id": {
-      "name": "widget.deal_date_field",
-      "type": "text",
+      "name": "ID поля даты заказа",
+      "type": "number",
       "required": true,
       "default": 885453
     },
     "delivery_range_field": {
-      "name": "widget.delivery_range",
-      "type": "text",
+      "name": "ID поля диапазона доставки",
+      "type": "number",
       "required": false,
       "default": 892009
     }
   },
-  "tour": {
-    "is_tour": true,
-    "tour_images": {
-      "ru": ["https://alerom2006.github.io/Calendar/images/logo.png"]
-    },
-    "tour_description": "widget.tour_description"
-  }
+  "required_scopes": ["leads_read", "contacts_read"]
 }
