--- a/manifest.json
+++ b/manifest.json
@@ -4,21 +4,17 @@
     "name": "widget.name",
     "description": "widget.description",
     "short_description": "widget.short_description",
-    "tour_description": "widget.tour_description",
     "version": "1.0.0",
     "interface_version": 2,
     "init_once": true,
     "locale": ["ru", "en"],
     "installation": true,
-    "mobile_card": false,
     "support": {
       "link": "https://yourdomain.com/support",
       "email": "support@yourdomain.com"
     },
     "icon": "images/icon.png",
-    "icon_small": "images/icon_small.png",
-    "icon_medium": "images/icon_medium.png",
-    "icon_large": "images/icon_large.png"
+    "icon_small": "images/icon_small.png"
   },
   "locations": [
     "lcard-1",
@@ -28,12 +24,11 @@
     "lead_sources"
   ],
   "settings": {
-    "deal_date_field_id": {
+    "deal_date_field": {
       "name": "widget.deal_date_field",
       "type": "number",
       "required": true,
-      "placeholder": "widget.field_placeholder",
-      "hint": "widget.field_hint"
+      "placeholder": "widget.field_placeholder"
     },
     "dp.webhook_url": {
       "name": "widget.webhook_url",
@@ -42,37 +37,10 @@
       "placeholder": "widget.webhook_placeholder",
       "visible_for": ["digital_pipeline"],
       "hint": "widget.webhook_hint"
-    },
-    "api_key": {
-      "name": "widget.api_key",
-      "type": "password",
-      "required": false
-    }
-  },
-  "advanced": {
-    "title": "widget.advanced_settings",
-    "settings": {
-      "refresh_interval": {
-        "name": "widget.refresh_interval",
-        "type": "number",
-        "min": 1,
-        "max": 60,
-        "default": 5
-      },
-      "debug_mode": {
-        "name": "widget.debug_mode",
-        "type": "boolean",
-        "default": false
-      }
     }
   },
   "permissions": {
     "leads": {
-      "view": true,
-      "edit": false,
-      "delete": false
-    },
-    "contacts": {
       "view": true,
       "edit": false
     }
