--- a/manifest.json
+++ b/manifest.json
@@ -15,15 +15,7 @@
       "email": "your-email@example.com"
     }
   },
-  "locations": [
-    "lcard-1",
-    "llist-0",
-    "ccard-0",
-    "clist-0",
-    "settings",
-    "card_sdk",
-    "everywhere"
-  ],
+  "locations": ["lcard-1", "card_button", "card_sdk", "settings"],
   "settings": {
     "api_key": {
       "name": "widget.api_key",
