--- a/manifest.json
+++ b/manifest.json
@@ -5,11 +5,12 @@
     "description": "widget.description",
     "short_description": "widget.short_description",
     "tour_description": "widget.tour_description",
-    "version": "1.0.33",
+    "version": "1.0.34",
     "interface_version": 3,
     "init_once": false,
     "locale": ["ru", "en"],
     "installation": true,
+    "scopes": ["crm", "files", "files_delete"],
     "support": {
       "link": "https://alerom2006.github.io/Calendar/",
       "email": "your-email@example.com"
