--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,7 @@
     },
     "content_security_policy": "script-src 'self' https://cdn.amocrm.ru 'unsafe-inline' 'unsafe-eval'; connect-src 'self' https://*.amocrm.ru; frame-src 'self' https://*.amocrm.ru; object-src 'self'"
   },
-  "locations": ["lcard-1", "lcard-2", "settings"],
+  "locations": ["lcard-1", "settings"],
   "settings": {
     "api_key": {
       "name": "widget.api_key",
