--- a/manifest.json
+++ b/manifest.json
@@ -5,17 +5,17 @@
     "description": "widget.description",
     "short_description": "widget.short_description",
     "tour_description": "widget.tour_description",
-    "version": "1.0.0",
-    "interface_version": 3,
+    "version": "1.0.1",
+    "interface_version": 2,
     "init_once": false,
     "locale": ["ru", "en"],
     "installation": true,
-    "scopes": ["crm", "files", "files_delete"],
+    "scopes": ["crm", "widgets", "files", "files_delete"],
     "support": {
       "link": "https://alerom2006.github.io/Calendar/",
       "email": "your-email@example.com"
     },
-    "content_security_policy": "script-src 'self' https://cdn.amocrm.ru 'unsafe-inline' 'unsafe-eval'; connect-src 'self' https://*.amocrm.ru; frame-src 'self' https://*.amocrm.ru; object-src 'self'"
+    "content_security_policy": "script-src 'self' https://cdn.amocrm.ru https://cdn.amocrm.com 'unsafe-inline' 'unsafe-eval'; connect-src 'self' https://*.amocrm.ru https://*.amocrm.com; frame-src 'self' https://*.amocrm.ru https://*.amocrm.com; object-src 'self'"
   },
   "locations": ["lcard-1", "settings"],
   "settings": {
